--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" type="png" href="./images/happy-meme-face.png"/>
     <title>Back End Assessment</title>
     <link rel="stylesheet" href="styles.css">
   </head>
@@ -80,12 +81,12 @@
           <form>
             <div> <p>Select the letter you'd like to create for your plan:  
             <select name="" id="list">
-                <option value="0">-Select-</option>
-                <option value="1">Letter S</option>
-                <option value="2">Letter M</option>
-                <option value="3">Letter A</option>
-                <option value="4">Letter R</option>
-                <option value="5">Letter T</option>
+                <option id="0" value="0">-Select-</option>
+                <option id="1" value="1">Letter S</option>
+                <option id="2"value="2">Letter M</option>
+                <option id="3"value="3">Letter A</option>
+                <option id="4"value="4">Letter R</option>
+                <option id="5"value="5">Letter T</option>
               </select>
             </p>
             </div>
@@ -98,7 +99,26 @@
         <br>
 
         <section id="letter-content-container" style="border: 1px solid blue;"></section>
+        <br>
 
+        <div style="border: 1px solid blue;">
+          <div>
+            <p>Congrats on getting started with a SMART plan for your future. To wrap it up, type out a pokemon name to get their picture if you'd like!</p>
+            <input type="text" name="" id="pokiInput" style="border:1px solid red;">
+            <button id="pokiSearch">Search</button>
+          </div>
+          <br>
+          <div id="pokemonSpot">
+            <!-- <img class="pokeImg" src="" alt=""> -->
+          </div>  
+          <img class="poke" src="" alt="">
+          <img class="poke" src="" alt="">
+          <img class="poke" src="" alt="">
+          <img class="poke" src="" alt="">
+          </div>
+          </div>
+        </div>
+        <br>
 
     </div>
 
